--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 /* general settings */
 
 body {
+	min-width: 310px;
 	padding-top: 110px;
     font-family: 'Source Sans Pro',sans-serif;
     color: #73879c;
@@ -109,6 +110,11 @@ a.navbar-brand:hover img,
 	border: none;
 }
 
+.navbar-fixed-top .navbar-collapse {
+    max-height: 320px;
+	border-bottom: 1px solid #cccccc;
+}
+
 .dropdown-menu {
     top: 97%;
 }
@@ -141,6 +147,7 @@ a.navbar-brand:hover img,
 .modal {
 	display: none;
 	width: 400px;
+	max-width: 100%;
 	height: 400px;
 	margin: auto;
 	padding: 20px;
@@ -540,23 +547,60 @@ footer .input-group-btn .btn {
 	color: #1abb9c;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 640px) {
 	h1 {
-    font-size: 38px;
-    line-height: 115%;
-    letter-spacing: .031em;
+		font-size: 18px;
+		line-height: 115%;
+		letter-spacing: .031em;
 	}
 	
-	h2 {
-		font-size: 33px;
-		line-height: 120%;
-		margin-bottom: 20px;
+	.slide p {
+		display: none;
 	}
 	
+	.slide .btn-large {
+		padding: 3px 9px;
+		margin: 0;
+	}
+	
+	.slide a.btn {
+		font-size: 10px;
+	}
+	
+	.carousel-caption {
+		bottom: 0;
+	}
+}
+
+@media (min-width: 641px) and (max-width: 767px) {
+	h1 {
+		font-size: 38px;
+		line-height: 115%;
+		letter-spacing: .031em;
+	}
+
 	.slide p {
 		font-size: 20px;
 		line-height: 135%;
 		margin-top: 15px;
+	}
+	
+	.slide .btn-large {
+		padding: 0;
+		margin: 0;
+	}
+	
+	.carousel-caption {
+		bottom: 0;
+	}
+	
+}
+
+@media (max-width: 767px) {
+	h2 {
+		font-size: 33px;
+		line-height: 120%;
+		margin-bottom: 20px;
 	}
 	
 	.middle-p {
@@ -573,6 +617,10 @@ footer .input-group-btn .btn {
 		padding-left: 20px;
 		}
 		
+	.navbar-nav{
+		margin: 0;
+	}	
+	
 	.inner {
 		padding-top: 80px;
 		padding-bottom: 80px;
@@ -675,5 +723,3 @@ footer .input-group-btn .btn {
 		margin-right: 13px;
 	}
 }
-
-
